--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -1,16 +1,18 @@
 color_fondo = #444
+color_letras = rgba(white,0.5)
 azul = #22BCE0
 
 body
-	//background #302B23
 	color color_fondo
 	font-family Arial, Helvetica, sans-serif
 	font-size 16px
 	
 footer
 	background color_fondo
-	color rgba(white,0.5)
+	bottom 0
+	color color_letras
 	padding 1em 0
+	position fixed
 	text-align center
 	width 100%
 		
@@ -21,7 +23,8 @@ footer
 		strong
 			display block
 	
-		.design, .electronica
+		.design 
+		.electronica
 			display block
 
 			&:before
@@ -30,7 +33,7 @@ footer
 
 header
 	background color_fondo
-	color rgba(white,0.5)
+	color color_letras
 	padding 0.5em
 	position relative
 	
@@ -70,147 +73,107 @@ header
 			text-align center
 			line-height 60px
 
-.sec
-	background white
-	
-	.selPuerto
-
-		.cajaselect
-			background none repeat scroll 0 0 #4cbeff
-			border-radius 5px 5px 0 0
-			cursor pointer
-			margin-top 10px
-			padding 5px 10px
-			position relative
-			z-index 1
-			
-			ul
-				.listaselect
-					background none repeat scroll 0 0 #fff
-					border 1px solid #dedede
-					display none
-					left -1px
-					margin-left 0
-					margin-top 49px
-					padding-left 0
-					position absolute
-					text-indent 150px
-					top 0
-					width 100%
-
-					li
-						border-bottom 1px solid #efefef
-						cursor pointer
-						display block
-						line-height 150px
-						list-style outside none none
-						margin 0
-						padding 1.1em 0.3em
-
-						a:hover
-							color #999797
-							text-decoration none
-							
-.selectProductos
-	li:last-child
-		border-bottom medium none
-			
-.seleccionado
-	color white
-	display block
-	font-weight 700
-	line-height 3
-	text-indent 10px
-
-			.trianguloInf
-				border-left 9px solid rgba(0, 0, 0, 0)
-				border-right 9px solid rgba(0, 0, 0, 0)
-				border-top 13px solid #cfecfc
-				height 0
-				position absolute
-				right 10px
-				top 17px
-				width 0
-
-			.trianguloUp
-				border-bottom 13px solid #cfecfc
-				border-left 9px solid rgba(0, 0, 0, 0)
-				border-right 9px solis rgba(0, 0, 0, 0)
-				height 0
-				position absolute
-				right 10px
-				top 17px
-				width 0
-
-	.controles
-		.onOff
-			top 10px
-			margin-top 10px
-			img
-				width 150px
-				
-	//jquery.tzineClock.css
-	.clock
-		background-color #252525
-		float left
-		height 200px
-		overflow hidden
+nav
+	.cajaselect
+		background none repeat scroll 0 0 #4CBEFF
+		border-radius 0 0 0 0
+		cursor pointer
+		margin-top 10px
+		padding 5px 10px
 		position relative
-		width 200px
-
-		.front.left
-				left 0
-				z-index 10
+		z-index 1
 		
-		.rotate
-			height 200px
-			left 0
-			position absolute
-			top 0
-			width 200px
+		span.seleccionado
+			color white
+			display block
+			font-weight 700
+			line-height 3
+			text-indent 10px
 
-		.bg, .front
-			background-color #252525
-			height 200px
+		span.trianguloInf
+			border-left 9px solid rgba(0, 0, 0, 0)
+			border-right 9px solid rgba(0, 0, 0, 0)
+			border-top 13px solid #CFECFC
+			height 0
 			position absolute
-			top 0
-			width 100px
-		
-		.display
-			color #F5F5F5
-			font-family "Lucida Sans Unicode", "Lucida Grande", sans-serif
-			font-size 60px
-			left 0
+			right 10px
+			top 17px
+			width 0
+
+		span.triangulosup
+			border-bottom 13px solid #CFECFC
+			border-left 9px solid rgba(0, 0, 0, 0)
+			border-right 9px solis rgba(0, 0, 0, 0)
+			height 0
 			position absolute
-			text-align center
-			text-shadow 4px 4px 5px #333333
-			top 65px
-			width 200px
-			z-index 20
-			
-		.bg
-			.left
-				left 0
-			.right
-				left 100px	
-	.green
-		.bg
-			.left
-				background url(../imagenes/bg_green.png) no-repeat left top
-			.right
-				background url(../imagenes/bg_green.png) no-repeat right top
-				
-	.rotate
-		.right
+			right 10px
+			top 17px
+			width 0
+
+		ul.listaselect
+			background none repeat scroll 0 0 #FFF
+			border 1px solid #DEDEDE
 			display none
-			z-index 11
+			left -1px
+			margin-left 0
+			margin-top 49px
+			padding-left 0
+			position absolute
+			text-indent 15px
+			top 0
+			width 100%
 
-//styles.css
-#fancyClock
-	//border 1px solid #111111
-	height 200px
-	margin 40px auto
-	width 600px
-	
+			li
+				border-bottom 1px solid #EFEFEF
+				cursor pointer
+				display block
+				line-height 15px
+				list-style outside none none
+				margin 0
+				padding 1.1em 0.3em
+				
+				a
+					color #333
+					text-decoration none
 
+			li:hover
+				background color_fondo
+
+				a
+					color color_letras
+					text-decoration none
+
+					&:before
+					&:after
+						content " - "
+
+section
 	
+	article.controles
+		align center
+		display none
+		margin-top 10px
+		top 10px
+
+		.onOff
+			margin-left 7.5%
+			width 85%
+			
+			figure
+				img
+					margin-left 5%
+					width 90%
+
+		.divDimmer
+			margin-left 10%
+			text-align center
+			width 80%
+
+	article.infoLuz
+		display none
+		margin-left 10%
+		margin-top 5px
+		width 80%
+
+	article.welcome
+		margin-top 10px
