--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -195,6 +195,11 @@ section
 
 	article.welcome
 		margin-top 10px
+		margin-left 10%
+
+		img
+			width 90%
+			
 
 @media screen and (min-width: 768px)
 	nav
