--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,9 @@
 <body onload="Inicio()">
 	<header>
 		<div class="logo">
-			<img src="../static/imagenes/logo.png" alt="Domotica" title="Raspberry Pi" />
+			<figure>
+				<img src="../static/imagenes/logo.png" alt="Domotica" title="Raspberry Pi" />
+			</figure>
 		</div>
 		<div class="titulo">
 			<h1 class="title">
@@ -18,7 +20,9 @@
 			</h1>
 		</div>
 		<div class="logoU">
-			<img src="../static/imagenes/logoU.png" alt="Universidad" title="Universidad" />
+			<figure>
+				<img src="../static/imagenes/logoU.png" alt="Universidad" title="Universidad" />
+			</figure>
 		</div>
 	</header>
 	<nav>
@@ -36,9 +40,7 @@
 	</nav>
 	<section>
 		<article class="welcome">
-			<div>
-				<span>Bienvenido al centro de domotica Benavides!</span>
-			</div>
+			<img src="../static/imagenes/AwesomeHome.png" alt="Awesome Home" title="Awesome Home">
 		</article>
 		<article class="tablaLuz">
 			<div class="cabecera">
@@ -64,7 +66,7 @@
 					</figure>
 				</div>
 				<div class="divDimmer">
-					<input type="range" id="idDimmer" name="dimmer" value="100" min="0" max="100" step="1" onchange="ProcesoLuz('dimmer')" />
+					<input type="range" id="idDimmer" name="dimmer" value="100" min="20" max="80" step="1" onchange="ProcesoLuz('dimmer')" />
 				</div>
 			</div>
 			<div class="infoLuz">
