se colocó un if en el template y se cambió el como aparece el estado de la luz con "encendido" y "apagado". se quitan comentarios a la parte del dimmer y luz para prueba en raspberry

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,7 +53,11 @@
 				<div class="luzOver" id="puertoLuz{{l.puerto}}" onclick="luzOverClick({{l.puerto}})">
 					<div class="tabla"><span id="nombrePuerto{{l.puerto}}">{{l.nombre}}</span></div>
 					<div class="tabla"><span id="numeroPuerto{{l.puerto}}">{{l.puerto}}</span></div>
-					<div class="tabla"><span id="estadoPuerto{{l.puerto}}">{{l.valorLuz}}</span></div>
+					{%if l.valorLuz == 1%}
+						<div class="tabla"><span id="estadoPuerto{{l.puerto}}">Encendido</span></div>
+					{%else%}
+						<div class="tabla"><span id="estadoPuerto{{l.puerto}}">Apagado</span></div>
+					{%endif%}
 					<div class="tabla"><span id="valorDimmer{{l.puerto}}">{{l.valorDimmer}}</span></div>
 				</div>
 			{% endfor %}
