--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -104,12 +104,15 @@ nav
 		
 		li
 			display inline-block
-		
-			span
-				color white
-				display block
-				margin 0 0.5em
-				padding 0 0.2em
+			
+			a
+				text-decoration none
+
+				span
+					color white
+					display block
+					margin 0 0.5em
+					padding 0 0.2em
 
 			&:hover
 				background rgba(black,0.1)
@@ -169,6 +172,20 @@ section
 
 				.seccionReloj
 					stroke-width 0.5
+			
+			.temperatura
+				height 90
+				margin-left 25px
+				width 200
+				
+			.controlTermometro
+				width 100%
+
+				.controlPreferencia
+					display block
+					margin-left 9%
+					margin-top 5px
+					width 80%
 
 	article.tablaLuz
 		background rgba(black, 0.1)
