se coloca el sensor en la pagina para escritorio y se hacen pruebas con la raspberry para la funcionalidad del sensor de temperatura con resultados positivos, para que funcione quitar comentarios en models.py(librerias) falta terminar diseño de la pagina para escritorio (acomodar controles del sensor)

--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -218,6 +218,12 @@ section
 			.controles
 				alineacionEscritorio(25%, 15%)
 
+			.termometro
+				display block
+				float right
+				margin 30px 5%
+				width 40%
+
 		article.tablaLuz
 			alineacionEscritorio(40%, 60px)
 
