--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -92,15 +92,22 @@
 				</span>
 			</div>
 			<div class="termometro">
-				<svg class="temperatura">
+				<!-- <svg class="temperatura">
 					<text>
 						<tspan x="130" y="30">Temperatura</tspan>
-						<tspan x="130" y="55" id="temp">25 °</tspan>
+						<tspan x="130" y="55" id="temp"></tspan>
 						<tspan x="130" y="80">Humedad</tspan>
-						<tspan x="130" y="105" id="humedad">35 %</tspan>
+						<tspan x="130" y="105" id="humedad"></tspan>
 					</text>
-				</svg>
+				</svg> -->
 				
+				<div class="temperatura">
+					<h4><span>Temperatura:</span></h4>
+					<span id="temp">asdf</span>
+					<h4><span>Humedad:</span></h4>
+					<span id="humedad">asdf</span>
+				</div>
+
 				<div class="controlTermometro">
 					<h3><span>Preferencias</span></h3>
 					<div class="tMinima">
