--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -103,9 +103,9 @@
 				
 				<div class="temperatura">
 					<h4><span>Temperatura:</span></h4>
-					<span id="temp">asdf</span>
+					<span id="temp">cargando...</span>
 					<h4><span>Humedad:</span></h4>
-					<span id="humedad">asdf</span>
+					<span id="humedad">cargando...</span>
 				</div>
 
 				<div class="controlTermometro">
