se cambia la frecuencia que se usa para cada caso para la etapa de potencia, se crea un orderby para mostrar la tabla ordenada por numero de puerto

--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -17,7 +17,7 @@ body
 	font-size 16px
 	height 100%
 	//min-height 100vh 	///para footer abajo
-	margin 0 0 81px
+	margin 0 0 5rem
 
 footer
 	background color_fondo
@@ -254,3 +254,6 @@ section
 		article.welcome
 			display none
 
+@media screen and (min-height: 600px)
+	footer
+		margin-bottom -6rem
