se crea el login para ingresar a la pagina, hace falta crear la opcion para la gestion de agregado y eliminacion de puertos; se cambia el home para que este sea el login ahora y solo se redirecciona si se esta logeado con una cuenta de usuario existente en la consola de administracion

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,10 +44,15 @@
 					<span class="opciones">Opciones</span>
 				</a>
 			</li>
+			<li>
+				<a href="../cerrar">
+					<span class="cerrar">Cerrar Sesión</span>
+				</a>
+			</li>
 		</ul>
 	</nav>
 	<section>
-		{% block articulos %}{% endblock %}
+		{% block contenido %}{% endblock %}
 	</section>
 	<footer>
 		<h3>
