--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -185,6 +185,12 @@ section
 					margin-top 5px
 					width 80%
 
+acomodarTabla(anchoDiv){
+	display inline-block
+	height 40px
+	line-height 40px
+	width anchoDiv
+}
 
 	article.tablaLuz
 		background rgba(black, 0.1)
@@ -205,6 +211,9 @@ section
 			
 			&:hover
 				cursor pointer
+
+			&[name = nombre]
+				width 48%
 
 		.luzOver:hover
 			background rgba(black,0.1)
