--- a/app/static/css/domo.styl
+++ b/app/static/css/domo.styl
@@ -1,5 +1,6 @@
 color_fondo = #444
-color_letras = rgba(white,0.5)
+color_letras = rgba(white, 0.5)
+color_tabla_luz = rgba(black,0.1)
 color_nav = #22BCE0
 
 alineacionEscritorio(anchoDiv, margenIzq){
@@ -137,6 +138,24 @@ section
 	flex 1 	///para footer abajo
 	
 	article
+		width 100%
+
+		.botonIngreso
+			background color_fondo
+			border-radius 8px
+			float right
+			margin-right 20px
+			width 90px
+
+			input
+				background-color transparent
+				border none
+				color color_letras
+				font-weight bold
+				height 35px
+				text-align center
+				width 100%
+
 		.controles
 			display none
 			margin-top 10px
@@ -165,6 +184,24 @@ section
 			span
 				display block
 
+		.login
+			color rgba(black, 0.7)//color_letras
+			margin 10px 20px 10px 15px
+
+			& > *
+				display block
+
+			label:nth-child(odd)
+				font-weight bold
+				margin-top 10px
+
+			input:nth-child(even)
+				color rgba(black, 0.7)
+				font-size 1.2em
+				height 25px
+				margin-top 3px
+				width 100%
+
 		.termometro
 			display none
 
@@ -184,23 +221,16 @@ section
 					margin-left 9%
 					margin-top 5px
 					width 80%
-
-acomodarTabla(anchoDiv){
-	display inline-block
-	height 40px
-	line-height 40px
-	width anchoDiv
-}
-
+		
 	article.tablaLuz
-		background rgba(black, 0.1)
+		background color_tabla_luz
 		display none
 		margin-top 1px
 		text-align center
 		width 100%
 		
 		.cabecera
-			background rgba(black,0.2)
+			background rgba(black, 0.2)
 			margin-bottom 1px
 
 		.tabla
@@ -216,7 +246,7 @@ acomodarTabla(anchoDiv){
 				width 48%
 
 		.luzOver:hover
-			background rgba(black,0.1)
+			background color_tabla_luz
 
 	article.welcome
 		margin-top 10px
