--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% block contenido %}
-	<article class="login">
+	<article>
 		<form action="" id="formulario" method="post">
 			{% csrf_token %}
-			<table>{{formulario}}</table>
-			<p><input type="submit" value="Ingresar"></p>
+			<div class="login">{{formulario}}</div>
+			<div class="botonIngreso">
+				<input type="submit" value="Ingresar">
+			</div>
 		</form>
 	</article>
 {% endblock%}
